<?xml version="1.0"?>
<package format="2">
  <name>sensor_system</name>
  <version>0.0.0</version>
  <description>The sensor_system package</description>

  <maintainer email="ved@todo.todo">Ved Thakare</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-setuptools</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- External Python dependencies (handle via rosdep or requirements.txt) -->
  <exec_depend>pyqt6</exec_depend>
  <exec_depend>pyqtgraph</exec_depend>

  <export>
  </export>
</package>

